# CodeMint

./: .gitignore  pyproject.toml
codemint/: __init__.py  cli.py  config.py  logging.py
codemint/aggregate/: __init__.py  causal.py  cluster.py  collective.py  pipeline.py  rank.py  repair.py
codemint/diagnose/: __init__.py  clustered_mode.py  clustering.py  confirm.py  deep.py  fingerprint.py  item_mode.py  payloads.py  pipeline.py  propagation.py  resume.py
codemint/io/: __init__.py  filesystem.py  jsonl.py
codemint/loaders/: __init__.py  base.py  detect.py  merged.py  real_log.py  split.py
codemint/modeling/: __init__.py  client.py  concurrency.py  parser.py  token_budget.py
codemint/models/: __init__.py  base.py  diagnosis.py  run_metadata.py  spec.py  task.py  weakness.py
codemint/prompts/: __init__.py  registry.py
codemint/rules/: __init__.py  builtin.py  custom.py  engine.py
codemint/run/: dry_run.py  pipeline.py
codemint/synthesize/: allocation.py  contract_normalizer.py  contracts.py  diversity.py  feasibility.py  generate.py  input_view.py  language_profile.py  pipeline.py
demo_runs/faultlens/: codemint_inference.jsonl  codemint_results.jsonl  demo.yaml
docs/implementation-plans/: 2026-04-20-diagnose-clustered-mode.md
prompts/: aggregate_causal_chain.txt  aggregate_collective_diagnosis.txt  diagnose_deep_analysis.txt  diagnose_rule_confirm.txt  synthesize_feasibility_check.txt  synthesize_spec_generation.txt
scripts/: filter_pass_at_1_jsonl.py
tests/: test_cli_smoke.py  test_config.py  test_run_metadata.py
tests/io/: test_jsonl.py  (+1 more)
(+51 files in other folders)
