[project]
name = "codemint"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "PyYAML>=6,<7",
    "typer>=0.12",
]

[project.scripts]
codemint = "codemint.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
